--- a/src/views/login.html
+++ b/src/views/login.html
@@ -13,11 +13,11 @@
     </div>
     <div class="imgHeader">
         <div class="imgHeaederCenter">
-            <img class="left" src="./../../static/images/logo.png">
+            <a href="./../index.html"><img class="left" src="./../../static/images/logo.png"></a>
             <img class="right" src="./../../static/images/registerPromise.png">
         </div>
     </div>
-    <div class="banner">
+    <div class="banner"><a href="./../index.html"></a>
         <div class="bannerCenter">
             <div class="Register">
                 <h2>欢迎登陆</h2>
