--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -1,22 +1,27 @@
+@charset "UTF-8";
 body {
   background-color: #fff; }
 
 .container {
+  padding-top: 50px;
   width: 1090px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  display: flex; }
   .container .box {
-    margin: 50px;
     width: 402px;
-    height: 472px;
+    height: 420px;
     position: relative; }
     .container .box .middle {
       width: 400px;
       height: 400px;
-      border: 1px solid #000;
+      border: 1px solid #f8f8f8;
       position: relative; }
+      .container .box .middle > img {
+        width: 400px;
+        height: 400px; }
       .container .box .middle .shadow {
-        width: 100px;
-        height: 100px;
+        width: 200px;
+        height: 200px;
         background: yellow;
         position: absolute;
         left: 0;
@@ -25,23 +30,178 @@ body {
         opacity: .6; }
         .container .box .middle .shadow:hover {
           cursor: move; }
-    .container .box .small {
-      padding-top: 20px;
-      height: 100px;
-      width: 200px; }
-      .container .box .small > img {
-        float: left;
-        border: 1px solid #000; }
-      .container .box .small .current {
-        border-color: red; }
     .container .box .big {
       width: 400px;
       height: 400px;
-      background-image: url(./../../static/images/big1.jpg);
       background-repeat: no-repeat;
       background-position: 0 0;
-      background-size: 1600px 1600px;
+      background-size: 800px 800px;
       position: absolute;
       top: 0;
       right: -105%;
       display: none; }
+  .container .buy {
+    text-align: left;
+    padding-left: 30px;
+    padding-top: 20px; }
+    .container .buy h1 {
+      font-size: 25px;
+      color: #000;
+      line-height: 60px; }
+    .container .buy span {
+      font-size: 14px;
+      color: #333;
+      line-height: 30px; }
+    .container .buy p {
+      padding-top: 20px;
+      padding-left: 20px;
+      background-color: #F9F9F9;
+      height: 100px;
+      width: 500px; }
+      .container .buy p b {
+        font-size: 30px;
+        color: red; }
+    .container .buy .cart {
+      display: inline-block;
+      text-decoration: none;
+      margin-top: 10px;
+      width: 200px;
+      height: 50px;
+      color: #fff;
+      background-color: #f00;
+      text-align: center;
+      line-height: 50px;
+      font-size: 25px; }
+    .container .buy .pay {
+      display: inline-block;
+      text-decoration: none;
+      margin-top: 10px;
+      margin-left: 20px;
+      width: 200px;
+      height: 50px;
+      color: #f00;
+      border: 3px solid #f00;
+      text-align: center;
+      line-height: 50px;
+      font-size: 25px; }
+    .container .buy .evaluate {
+      color: #666;
+      font-size: 12px;
+      line-height: 30px; }
+
+/*商品信息*/
+.evaluation {
+  position: relative;
+  z-index: 0;
+  width: 1090px;
+  clear: both;
+  margin: 40px auto; }
+  .evaluation > .left {
+    float: left;
+    width: 178px;
+    position: relative;
+    margin-right: 20px;
+    border: 1px solid #eaeaea; }
+    .evaluation > .left h4 {
+      font-weight: bold;
+      color: #333;
+      font-size: 16px;
+      padding: 8px 10px;
+      border-bottom: 1px solid #eaeaea;
+      text-align: center; }
+    .evaluation > .left ul {
+      text-decoration: none; }
+      .evaluation > .left ul li {
+        position: relative;
+        margin: 0 10px;
+        padding: 10px 0 16px;
+        border-bottom: 1px solid #eaeaea; }
+        .evaluation > .left ul li a {
+          display: inline-block;
+          overflow: hidden; }
+          .evaluation > .left ul li a > img {
+            width: 158px;
+            height: 158px; }
+        .evaluation > .left ul li p {
+          padding: 0 5px;
+          height: 40px;
+          font-size: 12px;
+          line-height: 20px;
+          word-break: initial;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 2;
+          overflow: hidden; }
+        .evaluation > .left ul li > div {
+          zoom: 1; }
+          .evaluation > .left ul li > div p {
+            padding: 5px 5px 0;
+            line-height: 30px;
+            height: 25px;
+            color: red;
+            font-size: 18px; }
+          .evaluation > .left ul li > div span {
+            padding: 0 5px;
+            font-size: 12px;
+            color: #999; }
+  .evaluation > .right {
+    width: 890px;
+    position: relative;
+    zoom: 1;
+    float: left;
+    padding-top: 50px; }
+    .evaluation > .right .aside {
+      top: 0;
+      position: absolute;
+      width: 888px;
+      height: 48px;
+      border: 1px solid #eaeaea;
+      background-color: #f8f8f8; }
+      .evaluation > .right .aside .details {
+        display: inline-block;
+        text-align: center;
+        background-color: #fff;
+        height: 45px;
+        line-height: 45px;
+        width: 20%;
+        top: 0;
+        left: 0;
+        border-top: 4px solid #d41c44;
+        border-bottom: 1px solid #fff; }
+      .evaluation > .right .aside .talk {
+        display: inline-block;
+        border-right: 1px solid #eaeaea;
+        width: 159px;
+        color: #333;
+        text-align: center;
+        height: 48px;
+        line-height: 48px;
+        font-size: 16px;
+        cursor: pointer;
+        vertical-align: top; }
+      .evaluation > .right .aside .phone {
+        display: block;
+        position: relative;
+        color: #000;
+        top: 0;
+        right: 0;
+        float: right;
+        width: 116px;
+        text-align: center;
+        line-height: 50px;
+        cursor: pointer;
+        z-index: 9999; }
+        .evaluation > .right .aside .phone > img {
+          position: absolute;
+          left: 0px;
+          top: 50px;
+          display: none; }
+        .evaluation > .right .aside .phone:hover {
+          background-color: #fff;
+          color: red; }
+          .evaluation > .right .aside .phone:hover > img {
+            display: block; }
+    .evaluation > .right .attribute img {
+      width: 100%;
+      height: 500px;
+      display: block; }
