--- a/src/css/list.css
+++ b/src/css/list.css
@@ -44,7 +44,17 @@ body {
     font-size: 12px;
     line-height: 30px; }
     .topNav .topNavCenter > .left {
+      position: relative;
       float: left; }
+      .topNav .topNavCenter > .left .vip {
+        position: absolute;
+        left: 70px;
+        top: 0px;
+        background-color: #000;
+        overflow: hidden; }
+        .topNav .topNavCenter > .left .vip span {
+          color: red;
+          font-weight: 600px; }
       .topNav .topNavCenter > .left a {
         text-decoration: none;
         color: #999;
@@ -118,12 +128,16 @@ body {
     height: 100px;
     margin: 0 auto;
     position: relative; }
-    .header .headerCen > img {
-      position: absolute;
+    .header .headerCen > .logo {
+      position: relative;
       left: 0;
-      top: 20px;
-      width: 200px;
-      height: 65px; }
+      top: 0; }
+      .header .headerCen > .logo > img {
+        position: absolute;
+        left: 0;
+        top: 20px;
+        width: 200px;
+        height: 65px; }
     .header .headerCen .headerSearch {
       position: absolute;
       left: 343px;
@@ -165,9 +179,9 @@ body {
           line-height: 44px; }
         .header .headerCen .headerSearch .button:hover {
           background-color: #e00; }
-    .header .headerCen > a {
-      height: 40px;
-      width: 90px;
+    .header .headerCen > .cart {
+      height: 46px;
+      width: 116px;
       display: block;
       border: 3px solid red;
       border-radius: 40px;
@@ -179,12 +193,12 @@ body {
       line-height: 40px;
       padding-left: 20px;
       font-size: 20px; }
-      .header .headerCen > a span {
+      .header .headerCen > .cart span {
         font-size: 20px;
         color: red;
         font-weight: 800; }
-      .header .headerCen > a:hover {
-        background-color: #ccc;
+      .header .headerCen > .cart:hover {
+        background-color: #fff;
         color: red; }
 
 /*头部nav*/
@@ -192,6 +206,7 @@ body {
   width: 100%;
   background-color: #fff; }
   .headerNav .headerNavCen {
+    position: relative;
     width: 1090px;
     height: 40px;
     margin: 0 auto; }
@@ -231,6 +246,7 @@ body {
         display: block; }
     .headerNav .headerNavCen > ul {
       padding-left: 200px;
+      top: 10px;
       display: flex;
       position: absolute; }
       .headerNav .headerNavCen > ul > li {
@@ -267,13 +283,21 @@ body {
     background-color: #f0f0f0; }
   .list .container .row {
     background-color: #F6F6F6; }
+    .list .container .row .panel .panel-heading {
+      text-overflow: -o-ellipsis-lastline;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      line-clamp: 2;
+      -webkit-box-orient: vertical; }
     .list .container .row p {
       text-overflow: -o-ellipsis-lastline;
       overflow: hidden;
       text-overflow: ellipsis;
       display: -webkit-box;
-      -webkit-line-clamp: 1;
-      line-clamp: 1;
+      -webkit-line-clamp: 2;
+      line-clamp: 2;
       -webkit-box-orient: vertical; }
       .list .container .row p:hover {
         white-space: wrap;
