--- a/src/css/login.css
+++ b/src/css/login.css
@@ -19,13 +19,13 @@
     height: 100px;
     margin: 0 auto;
     position: relative; }
-    .imgHeader .imgHeaederCenter > .left {
+    .imgHeader .imgHeaederCenter .left {
       position: absolute;
       left: 0;
       top: 20px;
       width: 200px;
       height: 65px; }
-    .imgHeader .imgHeaederCenter > .right {
+    .imgHeader .imgHeaederCenter .right {
       position: absolute;
       right: 0px;
       height: 100px;
@@ -35,6 +35,12 @@
   height: 600px;
   background: url("./../../static/images/registerBanner.jpg") no-repeat;
   background-size: 100% 100%; }
+  .banner > a {
+    display: block;
+    height: 600px;
+    width: 100%;
+    position: absolute;
+    z-index: 20; }
   .banner .bannerCenter {
     position: relative;
     margin: 0 auto;
@@ -42,7 +48,7 @@
     height: 600px; }
     .banner .bannerCenter .Register {
       position: absolute;
-      z-index: 2;
+      z-index: 20;
       top: 50%;
       right: 40px;
       width: 350px;
