--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -20,14 +20,14 @@
         height:100px;
         margin:0 auto;
         position:relative;
-        >.left{
+        .left{
             position: absolute;
             left: 0;
             top: 20px;
             width: 200px;
             height: 65px;
         }
-        >.right{
+        .right{
             position:absolute;
             right:0px;
             height:100px;
@@ -39,6 +39,13 @@
     height:600px;
     background:url("./../../static/images/registerBanner.jpg") no-repeat;
     background-size:100% 100%;
+    >a{
+        display:block;
+        height:600px;
+        width:100%;
+        position:absolute;
+        z-index:20;
+    }
     .bannerCenter{
         position: relative;
         margin: 0 auto;
@@ -46,7 +53,7 @@
         height: 600px;
         .Register{
             position: absolute;
-            z-index: 2;
+            z-index: 20;
             top: 50%;
             right: 40px;
             width: 350px;
