--- a/src/sass/register.scss
+++ b/src/sass/register.scss
@@ -20,14 +20,14 @@
         height:100px;
         margin:0 auto;
         position:relative;
-        >.left{
+        .left{
             position: absolute;
             left: 0;
             top: 20px;
             width: 200px;
             height: 65px;
         }
-        >.right{
+        .right{
             position:absolute;
             right:0px;
             height:100px;
