--- a/src/views/list.html
+++ b/src/views/list.html
@@ -7,7 +7,6 @@
 <title>Document</title>
 <link rel="stylesheet" href="./../../dist/cssmin/list.min.css">
 <link rel="stylesheet" href="./../../static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-
 </head>
 <body>
         <!-- 黑色nav -->
@@ -15,13 +14,14 @@
                 <div class="topNavCenter">
                     <div class="left">
                         <span>考拉欢迎您！</span>
-                        <a href="#">登陆</a>
-                        <a href="#">免费注册</a>
-                        <a class="chart" href="#">手机考拉
+                        <a href="./login.html">登陆</a>
+                        <a href="./register.html">免费注册</a>
+                        <a class="chart" href="javascript:;">手机考拉
                             <span><img src="./../../static/images/chart.png"><p>下载APP</p>
                                 <p>领1000元新人礼包</p>
                             </span>
                         </a>
+                        <div class="vip"><span></span><a class="logout">退出</a></div>
                     </div>
                     <div class="right">
                         <ul>
@@ -40,7 +40,7 @@
         <!-- 头部logo -->
         <div class="header">
            <div class="headerCen">
-                <img src="./../../static/images/logo.png" >
+                <a class="logo" href="./../index.html"><img src="./../../static/images/logo.png" ></a>
             <div class="headerSearch">
                     <div class="search">
                             <span class="iconfont">&#xe7a6;</span>
@@ -50,9 +50,9 @@
                             <span class="iconfont">&#xe7a6;</span>
                     </div>
             </div>
-            <a href="#">
-                    <span class="iconfont">&#xe614;</span>购物车
-            </a>
+            <a class="cart" href="./cart.html">
+                <span class="iconfont">&#xe614;</span>购物车
+        </a>
            </div>
         </div>
         <!-- 头部nav -->
@@ -63,17 +63,17 @@
                             <span class="iconfont">&#xe64d;</span>全部分类
                     </div>
                     <ul>
-                        <li><a href="#"><span class="iconfont">&#xe603;</span>美容彩妆<b>></b></a></li>
-                        <li><a href="#"> <span class="iconfont">&#xe61a;</span>母婴儿童<b>></b></a></li>
-                        <li><a href="#"> <span class="iconfont">&#xe61b;</span>营养保健<b>></b></a></li>
-                        <li><a href="#"> <span class="iconfont">&#xe60d;</span>数码家电<b>></b></a></li>
-                        <li><a href="#"> <span class="iconfont">&#xe638;</span>个人洗护<b>></b></a></li>
-                        <li><a href="#"> <span class="iconfont">&#xe609;</span>服饰鞋靴<b>></b></a></li>
-                        <li><a href="#"> <span class="iconfont">&#xe6ea;</span>运动户外<b>></b></a></li>
-                        <li><a href="#"> <span class="iconfont">&#xe60a;</span>手表配饰<b>></b></a></li>
-                        <li><a href="#"> <span class="iconfont">&#xe747;</span>极致轻奢<b>></b></a></li>
-                        <li><a href="#"> <span class="iconfont">&#xe608;</span>家居生活<b>></b></a></li>
-                        <li><a href="#"><span class="iconfont">&#xe621;</span>环球美食<b>></b></a></li>
+                        <li><a href="./list.html"><span class="iconfont">&#xe603;</span>美容彩妆<b>></b></a></li>
+                        <li><a href="./list.html"> <span class="iconfont">&#xe61a;</span>母婴儿童<b>></b></a></li>
+                        <li><a href="./list.html"> <span class="iconfont">&#xe61b;</span>营养保健<b>></b></a></li>
+                        <li><a href="./list.html"> <span class="iconfont">&#xe60d;</span>数码家电<b>></b></a></li>
+                        <li><a href="./list.html"> <span class="iconfont">&#xe638;</span>个人洗护<b>></b></a></li>
+                        <li><a href="./list.html"> <span class="iconfont">&#xe609;</span>服饰鞋靴<b>></b></a></li>
+                        <li><a href="./list.html"> <span class="iconfont">&#xe6ea;</span>运动户外<b>></b></a></li>
+                        <li><a href="./list.html"> <span class="iconfont">&#xe60a;</span>手表配饰<b>></b></a></li>
+                        <li><a href="./list.html"> <span class="iconfont">&#xe747;</span>极致轻奢<b>></b></a></li>
+                        <li><a href="./list.html"> <span class="iconfont">&#xe608;</span>家居生活<b>></b></a></li>
+                        <li><a href="./list.html"><span class="iconfont">&#xe621;</span>环球美食<b>></b></a></li>
                     </ul>
                 </div>
                 <ul>
@@ -104,6 +104,19 @@
 </div>
     
 </body>
+<script src="./../js/cookie.js"></script>
 <script src="./../js/promiseAjax.js"></script>
 <script src="./../js/list.js"></script>
+<script >
+var u=getCookie('username');
+    if(u==undefined){
+        document.querySelector(".topNav .vip").innerHTML="";
+    }else{
+        document.querySelector(".topNav .vip span").innerText=u;
+        document.querySelector(".topNav .vip .logout").onclick=function(){
+        delCookie("username");
+        location.href='./login.html'
+    }
+    }
+</script>
 </html>
