--- a/src/views/register.html
+++ b/src/views/register.html
@@ -13,7 +13,7 @@
     </div>
     <div class="imgHeader">
         <div class="imgHeaederCenter">
-                <img class="left" src="./../../static/images/logo.png">
+                <a href="./../index.html"><img class="left" src="./../../static/images/logo.png"></a>
                 <img class="right" src="./../../static/images/registerPromise.png">
         </div>
     </div>
